objects/Received_Part__c.object
<CustomObject>
    <description>Received Parts form Request Part object</description>
    <fields>
        <fullName>CreatedBy_Name__c</fullName>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp; CreatedBy.LastName</formula>
        <label>CreatedBy Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date Received</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Request_Part__r.Product_Code__c</formula>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Request_Part__r.Product_Name__r.Name</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Transfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Every Received Item has an auto created Product Transfer record created via Process Builder &quot;Auto Receive Part Process&quot; which runs a flow</description>
        <label>Product Transfer</label>
        <referenceTo>ProductTransfer</referenceTo>
        <relationshipLabel>Received Parts</relationshipLabel>
        <relationshipName>Received_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Ordered__c</fullName>
        <formula>Request_Part__r.Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Ordered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Received__c</fullName>
        <description>Number of items received</description>
        <label>Quantity Received</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receipt_Owner__c</fullName>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp; CreatedBy.LastName</formula>
        <label>Receipt Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Service__c</fullName>
        <description>Related Service to the Requested Part</description>
        <formula>Request_Part__r.Service__r.Name</formula>
        <label>Related Service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Part__c</fullName>
        <description>Requested Part parent that this Received Part record is for</description>
        <label>Request Part</label>
        <referenceTo>Request_Part__c</referenceTo>
        <relationshipLabel>Received Parts</relationshipLabel>
        <relationshipName>Received_Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Requested_Part__c</fullName>
        <formula>Request_Part__r.Customer_Ref__c</formula>
        <label>Customer Ref</label>
        <type>Text</type>
    </fields>
    <label>Received Part</label>
    <nameField>
        <displayFormat>RPL-{00000}</displayFormat>
        <label>Received Part Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Received Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Can_not_edit_Qty_Received</fullName>
        <active>true</active>
        <description>Received Part records auto create Product Transfers which can not be deleted when received. Users can only delete item</description>
        <errorConditionFormula>AND(
  NOT(ISNEW()),
  ISCHANGED( Quantity_Received__c )
)</errorConditionFormula>
        <errorMessage>Received Part Quantity Received record can never be edited once created. Delete this record and create a new one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Qty_Received_larger_than_Qty_Order</fullName>
        <active>true</active>
        <description>Must be greater than 0 and not over the original order</description>
        <errorConditionFormula>OR(Quantity_Received__c &gt;  Request_Part__r.Quantity__c -  Request_Part__r.Total_Quantity_Received__c,
Quantity_Received__c&lt;1
)</errorConditionFormula>
        <errorDisplayField>Quantity_Received__c</errorDisplayField>
        <errorMessage>Quantity Received must be a value that is NOT larger than the remaining requested order and can NOT be zero</errorMessage>
    </validationRules>
</CustomObject>